refactor(misc): migrate remaining string literals to StringLookup